/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
    id("io.freefair.lombok") version "8.13"
    java
    id("org.springframework.boot") version "3.2.5"
    id("io.spring.dependency-management") version "1.1.4"
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
    testImplementation("org.mockito:mockito-core:5.11.0")
    testImplementation("org.springframework.boot:spring-boot-starter-test")

    implementation(libs.guava)

    // Lambda
    implementation("com.amazonaws:aws-lambda-java-core:1.2.2")
    implementation("com.amazonaws:aws-lambda-java-events:3.11.1")

    // Logging
    implementation("org.apache.logging.log4j:log4j-api:2.25.3")
    implementation("org.apache.logging.log4j:log4j-core:2.25.3")
    implementation("org.apache.logging.log4j:log4j-slf4j-impl:2.25.3")
    runtimeOnly("com.amazonaws:aws-lambda-java-log4j2:1.5.1")

    // MongoDB
    implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
    implementation("org.mongodb:mongodb-driver-sync:4.11.1")
    testImplementation("org.springframework.boot:spring-boot-starter-test")

    // JSON
    implementation("com.google.code.gson:gson:2.10.1")

    // AWS SSM
    implementation("software.amazon.awssdk:ssm:2.24.0")

    // Google API Client
    implementation("com.google.api-client:google-api-client:1.32.1")
    implementation("com.google.http-client:google-http-client:2.1.0")
    implementation("com.google.oauth-client:google-oauth-client:1.30.4")

    // AWS DynamoDB
    implementation(platform("software.amazon.awssdk:bom:2.25.62"))
    implementation("software.amazon.awssdk:dynamodb")
    implementation("software.amazon.awssdk:regions")

    implementation("com.amazonaws:aws-xray-recorder-sdk-aws-sdk-v2:2.15.0")

    // Dagger (compile-time dependency injection)
    implementation("com.google.dagger:dagger:2.59.2")
    annotationProcessor("com.google.dagger:dagger-compiler:2.59.2")
}

// Spring Boot's dependency management pins Kotlin to 1.9.x, but recent Dagger compilers use Kotlin 2.2.x internally.
// We only need Kotlin on the annotation processor classpath, so keep this override scoped to annotation processing.
configurations.named("annotationProcessor") {
    resolutionStrategy.eachDependency {
        if (requested.group == "org.jetbrains.kotlin") {
            useVersion("2.2.20")
            because("Dagger compiler requires Kotlin 2.2.x (avoids missing kotlin.coroutines.jvm.internal.SpillingKt)")
        }
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application. It is only used during the build process.
    mainClass = "com.fryrank.handler.GetAllReviewsHandler"
}

tasks {
    test {
        useJUnitPlatform()  // Use JUnit 5

        environment("PUBLIC_USER_METADATA_TABLE_NAME", "test-user-metadata")
        environment("REVIEW_TABLE_NAME", "test-review-table")

        // Enable test output in console
        testLogging {
            events("passed", "skipped", "failed", "started")
            showStandardStreams = true
            showExceptions = true
            showCauses = true
            showStackTraces = true
            exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
        }

        // Generate HTML test report
        reports {
            html.required.set(true)
            junitXml.required.set(true)
        }
    }

    val buildZip by creating(Zip::class) {
        from(compileJava)
        from(processResources)
        into("lib") {
            from(configurations.runtimeClasspath)
        }
    }

    build {
        dependsOn(test)
        dependsOn(buildZip)
    }
}
